--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -12,18 +12,21 @@ repository = "https://github.com/qir-alliance/pyqir"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-llvm-ir = { version = "0.8.0", features = ["llvm-11"] }
-
-[dependencies.pyo3]
-version = "0.15.1"
+llvm-ir = { version = "0.8.1" }
+pyo3 = { version="0.15.2", optional = true }
 
 [features]
 extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
-default = ["extension-module"]
+python-bindings = []
+llvm11-0 = ["llvm-ir/llvm-11"]
+llvm12-0 = ["llvm-ir/llvm-12"]
+llvm13-0 = ["llvm-ir/llvm-13"]
+#llvm14-0 = ["llvm-ir/llvm-14"]
+default = ["extension-module", "python-bindings"]
 
 [lib]
 name = "pyqir_parser"
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "lib"]
 
 [package.metadata.maturin]
 name = "pyqir.parser._native"
