--- a/.github/workflows/link_and_spell_check.yml
+++ b/.github/workflows/link_and_spell_check.yml
@@ -50,3 +50,7 @@ jobs:
         strict: false
         incremental_files_only: true
         config: 'cspell.json'
+    - name: "Check type annotations and mypy stub files"
+      uses: jpetrucciani/mypy-check@v0.930
+      with:
+        path: '.'
