--- a/.github/workflows/link_and_spell_check.yml
+++ b/.github/workflows/link_and_spell_check.yml
@@ -50,7 +50,8 @@ jobs:
         strict: false
         incremental_files_only: true
         config: 'cspell.json'
-    - name: "Check type annotations and mypy stub files"
-      uses: jpetrucciani/mypy-check@0.930
-      with:
-        path: '.'
+
+  check-type-annotations:
+  - name: "Check type annotations and mypy stub files"
+    run: ./build.ps1 -t checkmypy
+    shell: pwsh
