--- a/.github/workflows/llvm.yml
+++ b/.github/workflows/llvm.yml
@@ -19,7 +19,7 @@ jobs:
       matrix:
         config:
           - {
-              os: "ubuntu-20.04",
+              os: "ubuntu-22.04",
               arch: "amd64",
               env: {},
             }
@@ -39,26 +39,31 @@ jobs:
           submodules: 'recursive'
       - name: Linux - Install build dependencies, ccache, ninja
         run: sudo apt-get install -y ccache ninja-build
-        if: ${{ matrix.config.os == 'ubuntu-20.04' }}
+        if: ${{ matrix.config.os == 'ubuntu-22.04' }}
       - name: Windows - Install build dependencies, sccache, ninja
         run: choco install --accept-license -y sccache ninja
         if: ${{ matrix.config.os == 'windows-2019' }}
       - name: MacOS - Install build dependencies, ccache, ninja
         run: brew install ccache ninja
         if: ${{ matrix.config.os == 'macOS-10.15' }}
-      - name: Windows - Install LLVM 11.1.0
-        run: choco install llvm --version=11.1.0 --allow-downgrade
+      - name: Windows - Install LLVM 13.0.1
+        run: choco install llvm --version=13.0.1 --allow-downgrade
         if: ${{ matrix.config.os == 'windows-2019' }}
       - name: "Build and Package LLVM"
         run: ./build.ps1 -t package-llvm
         shell: pwsh
+        if: ${{ matrix.config.os != 'ubuntu-22.04' }}
+      - name: "Build and Package LLVM for manylinux"
+        run: ./build.ps1 -t package-manylinux-llvm
+        shell: pwsh
+        if: ${{ matrix.config.os == 'ubuntu-22.04' }}
       - name: Artifacts
         uses: actions/upload-artifact@v3
         with:
           name: artifacts
           if-no-files-found: error
           path: |
-            target/*.zip
-            target/*.tar.gz
-            target/*.rpm
-            target/*.deb
+            target/**/*.zip
+            target/**/*.tar.gz
+            target/**/*.rpm
+            target/**/*.deb
