--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -13,15 +13,16 @@ repository = "https://github.com/qir-alliance/pyqir"
 
 [dependencies]
 llvm-ir = { version = "0.8.1" }
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
 pyo3 = { version="0.15.2", optional = true }
 
 [features]
 extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
 python-bindings = []
-llvm11-0 = ["llvm-ir/llvm-11"]
-llvm12-0 = ["llvm-ir/llvm-12"]
-llvm13-0 = ["llvm-ir/llvm-13"]
-#llvm14-0 = ["llvm-ir/llvm-14"]
+llvm11-0 = ["llvm-ir/llvm-11", "inkwell/llvm11-0"]
+llvm12-0 = ["llvm-ir/llvm-12", "inkwell/llvm12-0"]
+llvm13-0 = ["llvm-ir/llvm-13", "inkwell/llvm13-0"]
+#llvm14-0 = ["llvm-ir/llvm-14", "inkwell/llvm14-0"]
 default = ["extension-module", "python-bindings"]
 
 [lib]
