--- a/.github/workflows/llvm.yml
+++ b/.github/workflows/llvm.yml
@@ -29,7 +29,7 @@ jobs:
               env: {},
             }
           - {
-              os: "macOS-10.15",
+              os: "macos-11",
               arch: "amd64",
               env: {},
             }
@@ -45,7 +45,7 @@ jobs:
         if: ${{ matrix.config.os == 'windows-2019' }}
       - name: MacOS - Install build dependencies, ccache, ninja
         run: brew install ccache ninja
-        if: ${{ matrix.config.os == 'macOS-10.15' }}
+        if: ${{ matrix.config.os == 'macos-11' }}
       - name: Windows - Install LLVM 13.0.1
         run: choco install llvm --version=13.0.1 --allow-downgrade
         if: ${{ matrix.config.os == 'windows-2019' }}
