--- a/pyqir-generator/pyproject.toml
+++ b/pyqir-generator/pyproject.toml
@@ -3,6 +3,10 @@ name = "pyqir-generator"
 version = "0.5.0a1"
 requires-python = ">=3.6"
 
+dependencies = [
+    'dataclasses ~= 0.8; python_version < "3.7"'
+]
+
 [build-system]
 requires = ["maturin>=0.12.12,<0.13"]
 build-backend = "maturin"
