--- a/pyqir-generator/pyproject.toml
+++ b/pyqir-generator/pyproject.toml
@@ -2,6 +2,9 @@
 name = "pyqir-generator"
 version = "0.6.0a1"
 requires-python = ">=3.6"
+dependencies = [
+    "dataclasses; python_version < '3.7'"
+]
 
 [build-system]
 requires = ["maturin>=0.12.12,<0.13"]
