--- a/mypy.ini
+++ b/mypy.ini
@@ -4,6 +4,7 @@ exclude = (?x)(
     /pyqir/__init__\.py$  # pkgutil-style namespace packages.
     | ^examples/generator/mock_language/\w+\.py$
     | ^examples/generator/python2qir_qiskit_input\.py$)
+strict = True
 
 [mypy-antlr4]
 ignore_missing_imports = True
