Install dev requirements before running mypy

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,5 @@
 [mypy]
-files = pyqir-parser, pyqir-generator, pyqir-evaluator, pyqir-tests, examples
+files = examples, pyqir-evaluator, pyqir-generator, pyqir-parser, pyqir-tests
 exclude = (?x)(
     /pyqir/__init__\.py$  # pkgutil-style namespace packages.
     | ^examples/generator/mock_language/\w+\.py$
