--- a/pyqir-generator/pyproject.toml
+++ b/pyqir-generator/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyqir-generator"
-version = "0.6.0"
+version = "0.7.0a1"
 requires-python = ">=3.6"
 dependencies = [
     "dataclasses; python_version < '3.7'"
