--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,13 @@ name: CI
 on:
   push:
     branches:
-    - main
+      - main
+      - release/*
   pull_request:
     branches:
-    - main
-    - feature/*
-    - features/*
+      - main
+      - release/*
+      - feature/*
 
 env:
   CARGO_TERM_COLOR: always
