--- a/pyqir-evaluator/Cargo.toml
+++ b/pyqir-evaluator/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Microsoft"]
 name = "pyqir-evaluator"
-version = "0.7.0-alpha.1"
+version = "0.6.1"
 edition = "2018"
 license = "MIT"
 description = "Python based QIR Evaluation (JIT) library."
