--- a/pyqir-generator/requirements-dev.txt
+++ b/pyqir-generator/requirements-dev.txt
@@ -1,4 +1,4 @@
-pip>=21.3
-pytest-subtests>=0.7.0
-pytest>=3.5.0
-maturin>=0.12.12,<0.13
+maturin ~= 0.13.6
+pip ~= 22.2.2
+pytest-subtests ~= 0.8.0
+pytest ~= 7.1.3
