--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -12,13 +12,15 @@ repository = "https://github.com/qir-alliance/pyqir"
 [dependencies]
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
 llvm-ir = { version = "0.8.1" }
-pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"] }
+pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"], optional = true }
 
 [features]
+default = ["python-bindings"]
 llvm11-0 = ["llvm-ir/llvm-11", "inkwell/llvm11-0"]
 llvm12-0 = ["llvm-ir/llvm-12", "inkwell/llvm12-0"]
 llvm13-0 = ["llvm-ir/llvm-13", "inkwell/llvm13-0"]
-llvm14-0 = ["llvm-ir/llvm-14", "inkwell/llvm14-0"]
+# llvm14-0 = ["llvm-ir/llvm-14", "inkwell/llvm14-0"]
+python-bindings = ["pyo3"]
 
 [lib]
 name = "pyqir_parser"
