--- a/pyqir-evaluator/pyproject.toml
+++ b/pyqir-evaluator/pyproject.toml
@@ -3,6 +3,9 @@ name = "pyqir-evaluator"
 version = "0.7.0a1"
 requires-python = ">= 3.7"
 
+[project.optional-dependencies]
+test = ["pytest ~= 7.1.3"]
+
 [build-system]
 requires = ["maturin ~= 0.13.6"]
 build-backend = "maturin"
