--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -28,7 +28,7 @@ lazy_static = "1.4.0"
 mut_static = "5.0.0"
 bitvec = "1.0.0"
 
-# TODO: Avoid a transitive unicode-ident dependency for now due to licensing.
+# TODO: Allowlist the Unicode-DFS-2016 license and remove the following version upper bounds.
 syn = "1.0, < 1.0.95"
 proc-macro2 = "1.0, < 1.0.39"
 
