Update PyO3 and Maturin and require Python 3.7 (#169)

--- a/eng/Dockerfile.manylinux
+++ b/eng/Dockerfile.manylinux
@@ -32,15 +32,12 @@ RUN chown ${USER_UID}:${USER_GID} /io
 USER $USERNAME
 
 # Add all supported python versions
-ENV PATH /opt/python/cp36-cp36m/bin:/opt/python/cp37-cp37m/bin:/opt/python/cp38-cp38/bin:/opt/python/cp39-cp39/bin:/opt/python/cp310-cp310/bin:$PATH
+ENV PATH /opt/python/cp37-cp37m/bin:/opt/python/cp38-cp38/bin:/opt/python/cp39-cp39/bin:/opt/python/cp310-cp310/bin:$PATH
 
-RUN python3.6 -m pip install --no-cache-dir cffi \
-    && python3.7 -m pip install --no-cache-dir cffi \
+RUN python3.7 -m pip install --no-cache-dir cffi \
     && python3.8 -m pip install --no-cache-dir cffi \
     && python3.9 -m pip install --no-cache-dir cffi \
     && python3.10 -m pip install --no-cache-dir cffi
-
-RUN python3.10 -m pip install --no-cache-dir maturin==0.12.12
 
 USER root
 
