--- a/pyqir-generator/Cargo.toml
+++ b/pyqir-generator/Cargo.toml
@@ -9,16 +9,11 @@ readme = "README.md"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"] }
 qirlib = { path = "../qirlib" }
-pyo3 = { version="0.15.2", optional = true }
 
 [features]
-extension-module = ["pyo3/abi3-py36", "pyo3/extension-module"]
-python-bindings = []
-default = ["extension-module", "python-bindings"]
 llvm11-0 = ["qirlib/llvm11-0"]
 llvm12-0 = ["qirlib/llvm12-0"]
 llvm13-0 = ["qirlib/llvm13-0"]
@@ -34,7 +29,6 @@ classifier = [
     "License :: OSI Approved :: MIT License",
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
