--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -28,6 +28,10 @@ lazy_static = "1.4.0"
 mut_static = "5.0.0"
 bitvec = "1.0.0"
 
+# TODO: Allowlist the Unicode-DFS-2016 license and remove the following version upper bounds.
+syn = "1.0, < 1.0.95"
+proc-macro2 = "1.0, < 1.0.39"
+
 [dev-dependencies]
 serial_test = "0.6.0"
 tempfile = "3.2.0"
