Unify pyqir-generator and pyqir-evaluator

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,9 @@
 [mypy]
-files = examples, pyqir-evaluator, pyqir-generator, pyqir-parser, pyqir-tests
+files = examples, pyqir, pyqir-parser
 exclude = (?x)(
     /pyqir/__init__\.py$  # pkgutil-style namespace packages.
-    | ^examples/generator/mock_language/\w+\.py$
-    | ^examples/generator/python2qir_qiskit_input\.py$)
+    | ^examples/mock_language/\w+\.py$
+    | ^examples/python2qir_qiskit_input\.py$)
 strict = True
 
 [mypy-antlr4]
