--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -1,15 +1,16 @@
 [package]
 authors = ["Microsoft"]
-name = "pyqir-evaluator"
+name = "pyqir"
 version = "0.7.0-alpha.1"
 edition = "2018"
 license = "MIT"
-description = "Python based QIR Evaluation (JIT) library."
+description = "Python based QIR library."
 readme = "README.md"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
 
 [dependencies]
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
 pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"] }
 qirlib = { path = "../qirlib" }
 
@@ -19,16 +20,12 @@ llvm12-0 = ["qirlib/llvm12-0"]
 llvm13-0 = ["qirlib/llvm13-0"]
 llvm14-0 = ["qirlib/llvm14-0"]
 
-[dev-dependencies]
-serial_test = "0.6.0"
-
 [lib]
-name = "pyqir_evaluator"
 crate-type = ["cdylib"]
 
 [package.metadata.maturin]
-name = "pyqir.evaluator._native"
-classifier=[
+name = "pyqir._native"
+classifier = [
     "License :: OSI Approved :: MIT License",
     "Development Status :: 3 - Alpha",
     "Intended Audience :: Developers",
