--- a/pyqir/pyproject.toml
+++ b/pyqir/pyproject.toml
@@ -3,9 +3,12 @@ name = "pyqir"
 version = "0.7.0a1"
 requires-python = ">= 3.7"
 
-[build-system]
-requires = [
-    "setuptools >= 42",
-    "wheel"
+[project.optional-dependencies]
+test = [
+    "pytest ~= 7.1.3",
+    "pytest-subtests ~= 0.8.0",
 ]
-build-backend = "setuptools.build_meta"
+
+[build-system]
+requires = ["maturin ~= 0.13.6"]
+build-backend = "maturin"
