Update project tomls

--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -4,7 +4,7 @@ name = "pyqir"
 version = "0.7.0-alpha.1"
 edition = "2018"
 license = "MIT"
-description = "Python based QIR library."
+description = "PyQIR generates and evaluates the Quantum Intermediate Representation."
 readme = "README.md"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
@@ -25,17 +25,3 @@ crate-type = ["cdylib"]
 
 [package.metadata.maturin]
 name = "pyqir._native"
-classifier = [
-    "License :: OSI Approved :: MIT License",
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python",
-    "Programming Language :: Rust",
-    "Operating System :: MacOS",
-    "Operating System :: Microsoft :: Windows",
-    "Operating System :: POSIX :: Linux",
-]
