--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -4,7 +4,7 @@ name = "pyqir-parser"
 version = "0.7.0-alpha.1"
 edition = "2018"
 license = "MIT"
-description = "Python based QIR parser library."
+description = "A parser for the Quantum Intermediate Representation (QIR)."
 readme = "README.md"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
@@ -28,17 +28,3 @@ crate-type = ["cdylib", "lib"]
 
 [package.metadata.maturin]
 name = "pyqir.parser._native"
-classifier=[
-    "License :: OSI Approved :: MIT License",
-    "Development Status :: 3 - Alpha",
-    "Intended Audience :: Developers",
-    "Programming Language :: Python :: 3.7",
-    "Programming Language :: Python :: 3.8",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python",
-    "Programming Language :: Rust",
-    "Operating System :: MacOS",
-    "Operating System :: Microsoft :: Windows",
-    "Operating System :: POSIX :: Linux",
-]
