--- a/pyqir/pyproject.toml
+++ b/pyqir/pyproject.toml
@@ -2,10 +2,27 @@
 name = "pyqir"
 version = "0.7.0a1"
 requires-python = ">= 3.7"
+classifiers = [
+    "License :: OSI Approved :: MIT License",
+    "Development Status :: 3 - Alpha",
+    "Intended Audience :: Developers",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python",
+    "Programming Language :: Rust",
+    "Operating System :: MacOS",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: POSIX :: Linux",
+]
+
+[project.optional-dependencies]
+test = [
+    "pytest ~= 7.1.3",
+    "pytest-subtests ~= 0.8.0",
+]
 
 [build-system]
-requires = [
-    "setuptools >= 42",
-    "wheel"
-]
-build-backend = "setuptools.build_meta"
+requires = ["maturin ~= 0.13.6"]
+build-backend = "maturin"
