--- a/pyqir-parser/Cargo.toml
+++ b/pyqir-parser/Cargo.toml
@@ -10,7 +10,7 @@ homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
 
 [dependencies]
-inkwell = { git = "https://github.com/samarsha/inkwell", branch = "fix-internal-getters", default-features = false, features = ["target-x86"] }
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
 llvm-ir = { version = "0.8.1" }
 pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"], optional = true }
 
