--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -4,7 +4,7 @@ name = "pyqir"
 version = "0.7.0-alpha.1"
 edition = "2018"
 license = "MIT"
-description = "PyQIR generates and evaluates the Quantum Intermediate Representation."
+description = "PyQIR parses, generates and evaluates the Quantum Intermediate Representation."
 readme = "README.md"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
@@ -12,6 +12,7 @@ repository = "https://github.com/qir-alliance/pyqir"
 [dependencies]
 either = "1.8.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
+libc = "0.2.137"
 llvm-sys-110 = { package = "llvm-sys", version = "110.0.3", optional = true }
 llvm-sys-120 = { package = "llvm-sys", version = "120.2.2", optional = true }
 llvm-sys-130 = { package = "llvm-sys", version = "130.0.2", optional = true }
