--- a/deny.toml
+++ b/deny.toml
@@ -24,6 +24,7 @@ allow = [
     "Apache-2.0 WITH LLVM-exception",
     "BSD-3-Clause",
     "MIT",
+    "Unicode-DFS-2016",
 ]
 
 [sources.allow-org]
