--- a/pyqir/pyproject.toml
+++ b/pyqir/pyproject.toml
@@ -18,10 +18,7 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
-test = [
-    "pytest ~= 7.1.3",
-    "pytest-subtests ~= 0.8.0",
-]
+test = ["pytest ~= 7.1.3"]
 
 [build-system]
 requires = ["maturin ~= 0.13.6"]
