--- a/notice.toml
+++ b/notice.toml
@@ -1,10 +1,9 @@
 ignore-build-dependencies = true
-
 ignore-dev-dependencies = true
-
 accepted = [
     "Apache-2.0",
     "Apache-2.0 WITH LLVM-exception",
     "BSD-3-Clause",
     "MIT",
+    "Unicode-DFS-2016",
 ]
