--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,12 +1,6 @@
-name: Lint
 on:
-  push:
-    branches:
-    - main
-  workflow_dispatch:
   pull_request:
-    branches:
-    - main
+    branches: [main]
 
 jobs:
   lint:
@@ -33,4 +27,3 @@ jobs:
       with:
         use-verbose-mode: yes
         config-file: utils/mlc_config.json
-      if: ${{ github.event_name == 'push' }}
