Remove pyqir-parser

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,7 @@
 [mypy]
-files = examples, pyqir, pyqir-parser
+files = examples, pyqir
 exclude = (?x)(
-    /pyqir/__init__\.py$  # pkgutil-style namespace packages.
-    | ^examples/mock_language/\w+\.py$
+    ^examples/mock_language/\w+\.py$
     | ^examples/python2qir_qiskit_input\.py$)
 strict = True
 
