--- a/pyqir/Cargo.toml
+++ b/pyqir/Cargo.toml
@@ -4,21 +4,27 @@ name = "pyqir"
 version = "0.7.0-alpha.1"
 edition = "2018"
 license = "MIT"
-description = "PyQIR generates and evaluates the Quantum Intermediate Representation."
+description = "PyQIR parses, generates and evaluates the Quantum Intermediate Representation."
 readme = "README.md"
 homepage = "https://github.com/qir-alliance/pyqir"
 repository = "https://github.com/qir-alliance/pyqir"
 
 [dependencies]
+either = "1.8.0"
 inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["target-x86"] }
+libc = "0.2.137"
+llvm-sys-110 = { package = "llvm-sys", version = "110.0.3", optional = true }
+llvm-sys-120 = { package = "llvm-sys", version = "120.2.2", optional = true }
+llvm-sys-130 = { package = "llvm-sys", version = "130.0.2", optional = true }
+llvm-sys-140 = { package = "llvm-sys", version = "140.0.2", optional = true }
 pyo3 = { version = "0.17.2", features = ["abi3-py37", "extension-module"] }
 qirlib = { path = "../qirlib" }
 
 [features]
-llvm11-0 = ["qirlib/llvm11-0"]
-llvm12-0 = ["qirlib/llvm12-0"]
-llvm13-0 = ["qirlib/llvm13-0"]
-llvm14-0 = ["qirlib/llvm14-0"]
+llvm11-0 = ["llvm-sys-110", "qirlib/llvm11-0"]
+llvm12-0 = ["llvm-sys-120", "qirlib/llvm12-0"]
+llvm13-0 = ["llvm-sys-130", "qirlib/llvm13-0"]
+llvm14-0 = ["llvm-sys-140", "qirlib/llvm14-0"]
 
 [lib]
 crate-type = ["cdylib"]
