--- a/pyqir/pyproject.toml
+++ b/pyqir/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyqir"
-version = "0.7.0a1"
+version = "0.7.0"
 requires-python = ">= 3.7"
 classifiers = [
     "License :: OSI Approved :: MIT License",
