--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "qirlib"
-version = "0.7.0"
+version = "0.8.0-alpha.1"
 edition = "2021"
 license = "MIT"
 description = "Base Profile QIR library"
