--- a/qirlib/Cargo.toml
+++ b/qirlib/Cargo.toml
@@ -12,7 +12,7 @@ rust-version = "1.59"
 
 [dependencies]
 bitvec = "1.0"
-inkwell = { path = "../../../samarsha/inkwell", default-features = false, features = ["internal-getters"] }
+inkwell = "0.1.0-beta.5"
 lazy_static = "1.4"
 libc = "0.2"
 llvm-sys-110 = { package = "llvm-sys", version = "110.0", optional = true }
