Revert deny.toml

--- a/deny.toml
+++ b/deny.toml
@@ -26,3 +26,9 @@ allow = [
     "MIT",
     "Unicode-DFS-2016",
 ]
+
+[sources.allow-org]
+# github.com organizations to allow git sources for
+github = [
+    "TheDan64",
+]
