Fix typechecking with mypy>=0.990

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,12 +1,10 @@
 [mypy]
 files = examples, pyqir
-exclude = (?x)(
-    ^examples/mock_language/\w+\.py$
-    | ^examples/python2qir_qiskit_input\.py$)
+exclude = ^examples/(mock_language/\w+|python2qir_qiskit_input)\.py$
 strict = True
 
 [mypy-antlr4]
 ignore_missing_imports = True
 
 [mypy-mock_language.*]
-ignore_missing_imports = True
+follow_imports = skip
