Encapsulating string value

--- a/.github/actions/install-llvm/action.yml
+++ b/.github/actions/install-llvm/action.yml
@@ -60,7 +60,7 @@ runs:
 
     - name: Install LLVM
       run: |
-        $target_prefix = if(${{ inputs.target }} -eq "manylinux") {"manylinux-"} else {""}
+        $target_prefix = if("${{ inputs.target }}" -eq "manylinux") {"manylinux-"} else {""}
         ./build.ps1 -t "$($target_prefix)install-llvm-from-source"
       shell: pwsh
       if: ${{ steps.cache-llvm.outputs.cache-hit != 'true' }}
