--- a/eng/Dockerfile.manylinux
+++ b/eng/Dockerfile.manylinux
@@ -6,7 +6,6 @@ FROM quay.io/pypa/manylinux2014_x86_64
 ARG USERNAME=runner
 ARG USER_UID=1000
 ARG USER_GID=${USER_UID}
-ARG RUST_VERSION=1.64.0
 
 RUN groupadd --gid ${USER_GID} ${USERNAME}
 RUN useradd --uid ${USER_UID} --gid ${USER_GID} -m ${USERNAME}
@@ -16,13 +15,12 @@ RUN chmod 0440 /etc/sudoers.d/${USERNAME}
 
 ENV RUSTUP_HOME=/usr/local/rustup \
     CARGO_HOME=/usr/local/cargo \
-    PATH=/usr/local/cargo/bin:${PATH} \
-    RUST_VERSION=${RUST_VERSION}
+    PATH=/usr/local/cargo/bin:${PATH}
 
-RUN curl --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --no-modify-path --profile minimal --default-toolchain ${RUST_VERSION} -y
-
-RUN chmod -R a+w ${RUSTUP_HOME} ${CARGO_HOME}; \
-    rustup --version; \
+RUN curl --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- --no-modify-path --profile minimal --default-toolchain none -y
+RUN chmod -R a+w ${RUSTUP_HOME} ${CARGO_HOME};
+RUN rustup show
+RUN rustup --version; \
     cargo --version; \
     rustc --version;
 
