--- a/pyqir/pyproject.toml
+++ b/pyqir/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "pyqir"
-version = "0.8.0"
+version = "0.8.1"
 requires-python = ">= 3.7"
 classifiers = [
     "License :: OSI Approved :: MIT License",
@@ -10,6 +10,7 @@ classifiers = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Python",
     "Programming Language :: Rust",
     "Operating System :: MacOS",
