Cache CL args for inner build

--- a/qirlib/CMakeLists.txt
+++ b/qirlib/CMakeLists.txt
@@ -3,6 +3,28 @@
 
 cmake_minimum_required(VERSION 3.10.0)
 
+# Copy the command line arguments to a cache variable so that they can be used
+# with the inner project. This is needed because the inner project is a
+# needs to use the same configuration and the command line arguments are not
+# passed to the inner project.
+# This also manifests itself in apple silicon systems where the inner project
+# defaults to x86_64 even if the outer project is arm64.
+# This needs to be done before the project command is called.
+if (NOT QIRLIB_CMAKE_CL_ARGS)
+  # get all cache variables
+  get_cmake_property(vars CACHE_VARIABLES)
+  foreach(var ${vars})
+    get_property(currentHelpString CACHE "${var}" PROPERTY HELPSTRING)
+    # only add the cache variable to the list if it is set on the command line
+    if("${currentHelpString}" MATCHES "No help, variable specified on the command line." OR "${currentHelpString}" STREQUAL "")
+      message ("${var} = [${${var}}]  --  ${currentHelpString}")
+      list(APPEND QIRLIB_CMAKE_CL_ARGS "-D${var}=${${var}}")
+    endif()
+  endforeach()
+  # cache the command line arguments
+  set(QIRLIB_CMAKE_CL_ARGS ${QIRLIB_CMAKE_CL_ARGS} CACHE STRING "comment")
+endif ()
+
 project(qirlib_external)
 include(ExternalProject)
 
@@ -47,15 +69,6 @@ if ($ENV{QIRLIB_DOWNLOAD_LLVM} MATCHES "true")
     USES_TERMINAL_DOWNLOAD  TRUE
   )
 else()
-  # The outer cmake call from rust will configure CMAKE_INSTALL_PREFIX
-  # Unless the user overrides the install path rust will configure it to 
-  # be the crate OUT_DIR.
-  # The build will define CPACK_PACKAGE_FILE_NAME passing it to the LLVM build.
-  set (EXTERNAL_EXTRA_CMAKE_ARGS)
-  list (APPEND EXTERNAL_EXTRA_CMAKE_ARGS 
-    -DCMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}
-    -DCPACK_PACKAGE_FILE_NAME=${CPACK_PACKAGE_FILE_NAME}
-  )
 
   ExternalProject_Add(llvm
     GIT_REPOSITORY    https://github.com/llvm/llvm-project.git
@@ -63,7 +76,7 @@ else()
     GIT_SHALLOW       TRUE
     GIT_PROGRESS      TRUE
     SOURCE_SUBDIR     llvm
-    CONFIGURE_COMMAND ${CMAKE_COMMAND} -G Ninja -C ${CMAKE_CURRENT_LIST_DIR}/config.cmake ${EXTERNAL_EXTRA_CMAKE_ARGS} <SOURCE_DIR><SOURCE_SUBDIR>
+    CMAKE_ARGS        -C ${CMAKE_CURRENT_LIST_DIR}/config.cmake ${QIRLIB_CMAKE_CL_ARGS}
     BUILD_COMMAND     ninja
     USES_TERMINAL_DOWNLOAD  TRUE
     USES_TERMINAL_CONFIGURE TRUE
